scaffolded organization pages

--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Organizations#edit</h1>
-<p>Find me in app/views/organizations/edit.html.erb</p>
+<h1>Kurum Bilgilerini Düzenle</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Show', @organization %> |
+<%= link_to 'Back', organizations_path %>
