--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Organizations#show</h1>
-<p>Find me in app/views/organizations/show.html.erb</p>
+<p id="notice"><%= notice %></p>
+<p>
+  <b>Isim:</b>
+  <%= @organization.name %>
+</p>
+
+<p>
+  <b>Adres:</b>
+  <%= @organization.address %>
+</p>
+
+<p>
+  <b>Tanım:</b>
+  <%= @organization.description %>
+</p>
