integrated tiny mce for organization view/ edit

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -11,5 +11,5 @@
 
 <p>
   <b>Tanım:</b>
-  <%= @organization.description %>
+  <%= raw @organization.description unless @organization.description.nil? %>
 </p>
