--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,13 @@
+<ul>
 <% if organization_signed_in? %>
   <li><%=current_organization.email%></li>
+	<li><%= link_to "Düzenle", edit_organization_path(current_organization.id) %></li>
 	<li><%= link_to "Çıkış", destroy_organization_session_path %></li>
+	<li><%= link_to "Proje Yarat", new_project_path %></li>
+	<li><%= link_to "Projelerimiz", our_projects_path %></li>
 <% else %>
 	<li><%= link_to "Giriş", new_organization_session_path %></li>
 	<li><%= link_to "Kayıt", new_organization_registration_path %></li>
 <% end %>
+<li><%= link_to "Projeler", projects_path %></li>
+</ul>
