--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -26,7 +26,7 @@
   </div>
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.text_area :description_html %>
+    <%= f.text_area :description_html, :class => :mceEditor %>
   </div>
   <div class="field">
     <%= f.label :start_time %><br />
