first commit - ui integration

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,52 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div id="featured-content" class="widget widget-dark">
+  <div class="w-inner">
+    
+    <p>Find me in app/views/home/index.html.erb</p>
+ 
+  </div>
+</div><!-- end of #featured-content -->
+
+<div id="main-content">
+  <div class="widget widget-light">
+    <div class="w-inner">
+      <div class="w-title">Aktif Bağış Kampanyaları</div>
+      <ol>
+        <li>kimin eli</li>
+        <li>kimin cebinde</li>
+      </ol>
+      main content widget
+    </div>
+  </div>
+</div><!-- end of #main-content -->
+
+<div id="sidebar">
+
+  
+  <div id="w-yenikayit" class="widget widget-blue">
+    <div class="w-inner">
+      Yeni vakif ve dernek kaydi<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    </div>
+  </div>
+  
+  <div id="w-facebook" class="widget widget-dark">
+    <div class="w-inner">
+    facebook <br />facebook <br />facebook <br />facebook <br />facebook 
+    <!--
+    <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like-box href="http://www.benvarim.com" width="270" colorscheme="dark" connections="10" stream="false" header="false"></fb:like-box>
+      
+      <iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.benvarim.com&amp;width=270&amp;colorscheme=dark&amp;connections=10&amp;stream=false&amp;header=false&amp;height=255" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:270px; height:255px;" allowTransparency="true"></iframe> 
+    -->
+    </div>
+  </div><!-- end of .widget -->
+  
+  
+  <div id="w-twitter" class="widget widget-dark">
+    <div class="w-inner">
+    twitter  <br />twitter <br />twitter <br />
+    </div>
+  </div><!-- end of .widget --> 
+  
+</div><!-- end of #sidebar -->
+
+
+ 
