--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,23 +1,101 @@
-<ul>
-<% if organization_signed_in? %>
-  <li><%=current_organization.email%></li>
-	<li><%= link_to "Kurum Bilgilerini Düzenle", edit_organization_path(current_organization.id) %></li>
-	<li><%= link_to "Çıkış", destroy_organization_session_path %></li>
-	<li><%= link_to "Proje Yarat", new_project_path %></li>
-	<li><%= link_to "Projelerimiz", our_projects_path %></li>
-<% end%>
-<% if user_signed_in? %>
-  <li><%=current_user.email%></li>
-  <li><%= link_to "Bilgilerimi Düzenle", edit_user_path(current_user.id) %></li>
-  <li><%= link_to "Sayfalarım", my_pages_path %></li>
-  <li><%= link_to "Çıkış", destroy_user_session_path %></li>
-<% end %>
-<% unless organization_signed_in? || user_signed_in? %>
-	<li><%= link_to "Kurum Giriş", new_organization_session_path %></li>
-	<li><%= link_to "Kurum Kayıt", new_organization_registration_path %></li>
-	<li><%= link_to "Aktivist Giriş", new_user_session_path %></li>
-	<li><%= link_to "Aktivist Kayıt", new_user_registration_path %></li>
-<% end %>
-<li><%= link_to "Projeler", projects_path %></li>
-<li><%= link_to "Sayfa Yarat", new_page_path %></li>
-</ul>
+<!doctype html>  
+
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ --> 
+<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<head>
+  
+  <%= include_tiny_mce_if_needed %>
+  <%= csrf_meta_tag %>
+  
+  
+  <meta charset="utf-8">
+
+  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
+       Remove this if you use the .htaccess -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <title>Benvarim</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!--  Mobile viewport optimized: j.mp/bplateviewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Place favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+
+  <!-- CSS : implied media="all" -->
+  <%= stylesheet_link_tag "style" %>
+  
+  <!-- Uncomment if you are specifically targeting less enabled mobile browsers
+  <%= stylesheet_link_tag "handheld" %> 
+  -->
+ 
+  <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
+  <%= javascript_include_tag "libs/modernizr-1.6.min" %>
+ 
+
+</head>
+
+<body>
+  
+  <div id="wrapper">
+    <div id="header">
+      <div class="container">
+        <div id="header-logo"><a href="http://www.benvarim.com" title="BenVarım.com Anasayfa">benvarim.com</a></div>
+        <div id="header-subtitle">dünya'yı değiştirebilmek senin ellerinde...</div>
+        <div id="site-nav"> 
+          <ul class="clearfix">
+            <li><%=link_to "Anasayfa", :root, :class => "rc-top #{print_if_selected_tab :home, :index}", :id => "nav-anasayfa"%></li>
+            <li><%=link_to "Nedir?", :whats_benvarim, :class => "rc-top #{print_if_selected_tab :home, :whats_benvarim}", :id => "nav-nedir"%></li>
+            <li><a href="#" id="nav-nasil" class="rc-top">Nasıl Çalışır?</a></li>
+            <li><a href="#" id="nav-iletisim" class="rc-top">iletişim</a></li> 
+          </ul>
+        </div>
+        
+        <div id="utility-nav" class="rc-bottom">
+          <ul>
+            <li><a href="#" id="nav-login" class="">üye girişi</a></li> 
+            <li><a href="#" id="nav-register" class="">kayıt ol</a></li>  
+            
+            
+                  <% if organization_signed_in? %>
+                    <li><%=current_organization.email%></li>
+                  	<li><%= link_to "Kurum Bilgilerini Düzenle", edit_organization_path(current_organization.id) %></li>
+                  	<li><%= link_to "Çıkış", destroy_organization_session_path %></li>
+                  	<li><%= link_to "Proje Yarat", new_project_path %></li>
+                  	<li><%= link_to "Projelerimiz", our_projects_path %></li>
+                  <% end%>
+                  <% if user_signed_in? %>
+                    <li><%=current_user.email%></li>
+                    <li><%= link_to "Bilgilerimi Düzenle", edit_user_path(current_user.id) %></li>
+                    <li><%= link_to "Sayfalarım", my_pages_path %></li>
+                    <li><%= link_to "Çıkış", destroy_user_session_path %></li>
+                  <% end %>
+                  <% unless organization_signed_in? || user_signed_in? %>
+                  	<li><%= link_to "Kurum Giriş", new_organization_session_path %></li>
+                  	<li><%= link_to "Kurum Kayıt", new_organization_registration_path %></li>
+                  	<li><%= link_to "Aktivist Giriş", new_user_session_path %></li>
+                  	<li><%= link_to "Aktivist Kayıt", new_user_registration_path %></li>
+                  <% end %>
+                  <li><%= link_to "Projeler", projects_path %></li>
+                  <li><%= link_to "Sayfa Yarat", new_page_path %></li> 
+            
+        </div>
+        
+      </div>
+    </div><!-- end of #header -->
+    
+
+
+
+
+
+
+   
