--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,35 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <%= include_tiny_mce_if_needed %>
-  <title>Benvarim</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
 <%= render 'layouts/header'%>
-<%= yield %>
 
-</body>
-</html>
+<div id="content" class="clearfix">
+  <div class="container">
+    <%= yield %>
+  </div> 
+</div><!-- end of #container -->    
+    
+    
+
+<%= render 'layouts/footer'%>
+
+
+        
+        
+        
+        
+        
+        
+
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
