logic to load partial javascripts at the end of the page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,33 +3,33 @@
 <div id="content" class="clearfix">
   <div class="container">
     <%= yield %>
-  </div> 
-</div><!-- end of #container -->    
-    
-    
+  </div>
+</div><!-- end of #container -->
+
+
 
 <%= render 'layouts/footer'%>
+<%= render 'layouts/page_specific_js'%>
 
 
-        
-        
-        
-        
-        
-        
 
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
