--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -45,19 +45,5 @@
   </div>
 <% end %>
 
-<script type="text/javascript" charset="utf-8">
-  $('#page_organization_id').change(
-    function(event) {
-      var combo = $(event.target)
-      var org_id = combo.val();
-      //load the projects
-      $.getJSON('/kurum/' + org_id + "/projeler", function(resp) {
-        options_html = "";
-        $(resp).each(function(index, project) {
-          options_html += "<option value='" + project.id + "'>" + project.name  + "</option>";
-        });
-        $('#page_project_id').html(options_html);
-      });
-    }
-    );
-</script>
+<%add_page_specific_script "partial/page_form.js"%>
+
