--- a/app/views/pages/_list_pages.html.erb
+++ b/app/views/pages/_list_pages.html.erb
@@ -1,16 +1,16 @@
-<h1>Listing pages</h1>
+<h1>Sayfalar</h1>
 
 <table>
   <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Start time</th>
-    <th>End time</th>
-    <th>Goal</th>
-    <th>Collected</th>
-    <th>User</th>
-    <th>Organization</th>
-    <th>Project</th>
+    <th>Başlık</th>
+    <th>Tanım</th>
+    <th>Başlangıç</th>
+    <th>Bitiş</th>
+    <th>Hedef</th>
+    <th>Toplanan</th>
+    <th>Gönüllü</th>
+    <th>STK</th>
+    <th>Proje</th>
     <th></th>
     <th></th>
     <th></th>
@@ -27,12 +27,12 @@
     <td><%= page.user_id %></td>
     <td><%= page.organization_id %></td>
     <td><%= page.project_id %></td>
-    <td><%= link_to 'Show', page %></td>
+    <td><%= link_to 'Görüntüle', page %></td>
     <% if @show_edit_link %>
-      <td><%= link_to 'Edit', edit_page_path(page) %></td>
+      <td><%= link_to 'Düzenle', edit_page_path(page) %></td>
     <% end %>
     <% if @show_destroy_link %>
-      <td><%= link_to 'Destroy', page, :confirm => 'Emin misiniz?', :method => :delete %></td>
+      <td><%= link_to 'Sil', page, :confirm => 'Emin misiniz?', :method => :delete %></td>
     <% end %>
   </tr>
 <% end %>
