--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing page</h1>
+<h1>Sayfa Düzenle</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @page %> |
-<%= link_to 'Back', pages_path %>
+<%= link_to 'Görüntüle', @page %> |
+<%= link_to 'Geri', pages_path %>
