--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -2,6 +2,7 @@
 <% if user_signed_in? && @page.user == current_user %>
   <%= link_to 'Düzenle', edit_page_path(@page) %>
 <% end %>
+<%= image_tag @page.logo.url(:thumb) %>
 <p>
   <b>Başlık:</b>
   <%= @page.title %>
@@ -14,12 +15,12 @@
 
 <p>
   <b>Başlangıç:</b>
-  <%= @page.start_time %>
+  <%=human_readable_datetime @page.start_time %>
 </p>
 
 <p>
   <b>Bitiş:</b>
-  <%= @page.end_time %>
+  <%=human_readable_datetime @page.end_time %>
 </p>
 
 <p>
