better naming for organizations logo. logo upload for projects. better views and listing for projects

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= image_tag @project.logo.url(:thumb) %>
 <p>
   <b>Proje:</b>
   <%= @project.name %>
@@ -28,4 +28,4 @@
 <% if organization_signed_in? && current_organization == @project.organization%>
   <%= link_to 'Düzenle', edit_project_path(@project) %>
 <% end %>
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Geri', projects_path %>
