--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@project) do |f| %>
+<%= form_for @project, :html => { :multipart => true } do |f| %>
   <% if @project.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
@@ -14,6 +14,13 @@
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :logo %><br />
+    <% unless @project.new_record?%>
+      <%= image_tag @project.logo.url(:thumb) %>
+    <% end %>
+    <%= f.file_field :logo %>
   </div>
   <div class="field">
     <%= f.label :start_time %><br />
