--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Kurum Bilgilerini Düzenle</h1>
+<div class="widget widget-light">
+  <div class="w-inner">
+    <div class="w-title">Kurum Bilgilerini Düzenle</div>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Show', @organization %> |
-<%= link_to 'Back', organizations_path %>
+    <%= link_to 'Show', @organization %> |
+    <%= link_to 'Back', organizations_path %>
+
+    </div>
+  </div>
