--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Listing projects</h1>
+<div class="widget widget-light" id="w-yeni-kayi">
+  <div class="w-inner">
+    <div class="w-title">Bağış Kampanyaları</div>
+
 
 <table>
   <tr>
@@ -27,3 +30,6 @@
 <br />
 
 <%= link_to 'New Project', new_project_path %>
+
+
+</div>
