--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New project</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', projects_path %>
+<div class="widget widget-light">
+  <div class="w-inner">
+    <div class="w-title">Bağış Kampanyası Oluştur</div>
+    
+    <%= render 'form' %>
+    <%= link_to 'Back', projects_path %> 
+    
+  </div>
+</div>
