--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,11 +1,11 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Giriş", new_session_path(resource_name) %><br />
+  <%= link_to "Giriş", new_session_path(resource_name) %>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Kayıt", new_registration_path(resource_name) %><br />
+  <%= link_to "Yeni Kayıt Oluştur", new_registration_path(resource_name) %> 
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  <%= link_to "Şifrenizi mi unuttunuz?", new_password_path(resource_name) %><br />
+  <%= link_to "Şifrenizi mi unuttunuz?", new_password_path(resource_name) %> 
 <% end -%>
