--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -12,18 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name %>
     <%= f.text_field :name, :class=> "text-field" %>
   </div>
   <div class="field">
-    <%= f.label :address %><br />
+    <%= f.label :address %>
     <%= f.text_field :address, :class=> "text-field" %>
   </div>
   <div class="field">
-    <%= f.label :description %><br />
+    <%= f.label :description %>
     <%= f.text_area :description, :class => "mceEditor text-area" %>
   </div>
   <div class="actions">
-    <%= f.submit :kaydet, :class=>"button-primary" %>
+    <%= f.submit :kaydet, :class=>"button yellow button-primary" %>
   </div>
 <% end %>
