--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -231,6 +231,15 @@ body{
 a{ text-decoration:none; }
 a:hover{ border-bottom: 1px dotted 10355b;} 
 
+
+h1{
+  font-size:24px;
+  line-height:1.67; }
+
+p{ 
+  margin-bottom:20px;
+  line-height: 1.5; }
+  
 .container{
   width:960px;
   position:relative;
@@ -247,7 +256,7 @@ a:hover{ border-bottom: 1px dotted 10355b;}
 */
 #header{
   height:140px;
-  margin-bottom:20px;
+  margin-bottom:30px;
   position:relative;
 }
 
@@ -324,7 +333,8 @@ a:hover{ border-bottom: 1px dotted 10355b;}
   z-index:10;
   height: 20px;
   position:absolute; top:5px; right:0;
-  padding:5px 5px; }
+  padding:5px 5px;
+  opacity: .8; }
 
 #utility-nav ul{ 
   margin:0; 
@@ -350,6 +360,88 @@ a:hover{ border-bottom: 1px dotted 10355b;}
 
 
 /*
+** Featured Content
+*/
+.steps{
+  height:204px;
+  padding-bottom:20px;
+  display:none; }
+
+.steps-loading {
+  background:url("images/loading4.gif") no-repeat scroll 0 0 transparent;
+  color:#FFFFFF;
+  font-size:28px;
+  font-weight:lighter;
+  height:40px;
+  line-height:44px;
+  margin:100px auto 84px;
+  text-indent:140px;
+  text-shadow:0 1px 0 #B8D6F5;
+  width:300px; }
+
+.step{ 
+  display:none;
+  font-weight: lighter;
+  width: 290px;
+  float: left; 
+  margin-left: 20px;
+  position:relative; }
+
+.s-visual{ 
+  height:54px;
+  margin: 20px auto 30px;
+  background: url("images/featured_icons.png") no-repeat scroll center 0 transparent;
+  }
+
+#step-2 .s-visual{ background-position: center -51px; }
+#step-3 .s-visual{ background-position: center -101px; }  
+  
+.s-number{ 
+  position:absolute;
+  font-size:60px;
+  line-height:1;
+  top: 105px;
+  left: 0; 
+  font-family: "Gotham Rounded", "Gotham", "Helvetica Neue", Helvetica, sans-serif ;
+  color: #a4b1cb;}
+  
+.s-content{
+  padding-left:60px; 
+  font-size: 16px;
+  line-height: 1.67;}
+
+.step.s-first{ margin-left:0;}
+
+
+.campaign-form-container{
+  display:none;
+  border-top: 1px solid #254f79;  
+  margin-bottom:5px;
+  height:111px;}
+  
+.campaign-form-container .field{ margin:0;}
+.campaign-form-container h1{
+  border-top: 1px solid #1f3c5b;
+  padding-top:20px;
+  font-weight:normal;
+  margin-bottom:10px;
+  text-shadow:0 2px 0 #132A41; }
+  
+#featured-input{
+  color:#999999;
+  float:left;
+  font-size:14px;
+  font-style:italic;
+  height:29px;
+  margin-right:5px;
+  text-indent:5px;
+  text-shadow:0 2px 1px #FFFFFF;}
+  
+#featured-submit{ }
+
+
+
+/*
 ** Content
 */
 #content{ 
@@ -370,6 +462,21 @@ a:hover{ border-bottom: 1px dotted 10355b;}
   float:right;
 }
 
+/* Twitter Widget Overwrites */
+.twtr-hd { 
+  border-bottom:1px solid #0c4968;
+  margin-bottom:15px;
+  overflow:hidden;
+  padding: 0 0 15px !important;
+  position:relative; }
+
+.twtr-tweet-wrap{ padding:0 !important;}
+
+.twtr-ft div{
+  border-top:1px solid #0c4968;
+  margin-top:15px; 
+  padding: 15px 0 0 !important;
+}
 
 /*
 ** Footer
@@ -404,6 +511,74 @@ a:hover{ border-bottom: 1px dotted 10355b;}
 **
 */
 
+  /*
+  ** Form Elements
+  */
+   
+  
+  
+  .field { margin-bottom:20px; clear:both;}
+  
+  .field input,
+  .field textarea,
+  fieldset input,
+  fieldset textarea,
+  fieldset select {
+    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+    color: #222;
+    width: 490px;
+    padding: 5px;
+    font-size: 1.4em;
+    border: none;
+    background: #EDF9FB;
+    border: 1px solid #D3DDDF;
+    -webkit-border-radius: 5px;
+    -khtml-border-radius: 5px;  
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+  }
+
+  .field textarea,
+  fieldset textarea{ margin-bottom:0; }
+
+
+  .field input:focus,
+  .field textarea:focus,
+  fieldset input:focus,
+  fieldset textarea:focus {
+    background: #fff;
+    border: 1px solid #D3DDDF;
+  	-moz-box-shadow: 0 0px 5px rgba(0,0,0,0.2);
+  	-webkit-box-shadow: 0 0px 5px rgba(0,0,0,0.2);
+  }
+
+  .field label{
+    display:block;
+    float:left;
+    font-weight:bold;
+    line-height:38px;
+    margin-bottom:0;
+    text-transform:capitalize;
+    width:100px;
+  }
+
+
+  .field-checkbox {  }
+  
+  .field-checkbox label { 
+    line-height: 16px;
+    font-weight: normal; }
+    
+  .field-checkbox  input{ 
+    vertical-align:bottom;
+    margin-left: 100px;
+    float:left;
+    width: 20px;   }
+    
+    
+  .actions{ 
+    clear:both;
+    margin-bottom:20px;}
 
   /*
   ** Buttons
@@ -411,17 +586,18 @@ a:hover{ border-bottom: 1px dotted 10355b;}
   .button, .button:visited {
   	background: #222 url(images/overlay.png) repeat-x; 
   	display: inline-block; 
-  	padding: 5px 10px 6px; 
+  	padding: 7px 10px 6px; 
   	color: #fff; 
   	text-decoration: none;
-  	-moz-border-radius: 6px; 
-  	-webkit-border-radius: 6px;
-  	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.6);
-  	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.6);
+  	-moz-border-radius: 5px; 
+  	-webkit-border-radius: 5px;
+  	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
+  	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
   	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
   	border-bottom: 1px solid rgba(0,0,0,0.25);
   	position: relative;
-  	cursor: pointer;  }
+  	cursor: pointer; 
+  	text-transform: capitalize; }
 
   .button:hover	{ background-color: #111; color: #fff; }
   .button:active { top: 1px; }
@@ -434,12 +610,15 @@ a:hover{ border-bottom: 1px dotted 10355b;}
     text-shadow: 0 -1px 1px rgba(0,0,0,0.25); }
 
 	.large.button, .large.button:visited { 
-	  font-size: 14px; 
-    padding: 8px 14px 9px; }
+    font-size:16px;
+    padding:12px 20px 10px;}
 
 	.super.button, .super.button:visited { 
 	  font-size: 18px; 
-	  padding: 8px 14px 9px; }
+	  padding: 10px 30px 8px;
+  	-moz-border-radius: 5px; 
+  	-webkit-border-radius: 5px;
+  	line-height:22px; }
 
 	.pink.button, .magenta.button:visited		{ background-color: #e22092; }
 	.pink.button:hover							{ background-color: #c81e82; }
@@ -455,11 +634,17 @@ a:hover{ border-bottom: 1px dotted 10355b;}
 	  background-color: #ffb515;
 	  background-image: url(images/button_yellow.png) repeat-x;
 	  border: 1px solid #ffa03c;
-  	text-shadow: 0 -1px 1px rgba(250,180,0,0.95);
+    text-shadow: 0 -1px 1px #FF9900;
   	-moz-box-shadow: 0 1px 1px rgba(160,90,20,0.6);
   	-webkit-box-shadow: 0 1px 1px rgba(160,90,20,0.6); }
 	.yellow.button:hover						{ background-color: #fc9200; }
 	
+
+  #sidebar .button{ 
+    display:block;
+    margin:0 auto;
+    text-align:center;
+  }
   	
 
   /*
@@ -550,12 +735,37 @@ a:hover{ border-bottom: 1px dotted 10355b;}
       font-size:18px;
       line-height:18px;
       padding-bottom:10px;
-      margin-bottom:15px;
+      margin-bottom:20px;
       font-weight:bold;
       border-bottom: 1px solid #69748b;
       color: #2a4a6a;
     }
-
+    
+    
+    /*
+    ** Widget Customizations
+    */
+    .widget-form{
+      width:642px;
+      margin:40px auto;
+      
+    }
+    .widget-form .w-title{ font-size:24px; line-height:32px; margin-bottom:40px;}
+    .widget-form .button{ margin-left: 100px;}
+    
+    #widget-giris{}
+    
+    .widget-blue .w-title{
+      border-bottom:1px solid #0C7AB9;
+      color:#FFFFFF;
+      font-size:18px;
+      font-weight:bold;
+      line-height:22px;
+      margin-bottom:20px;
+      padding-bottom:10px;
+      text-align:center;
+      text-shadow:0 1px 0 #2A4A6A;
+    }
 
 
 /*
