my changes from last week.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,12 @@
 <div class="container">
 <div id="footer-logo">benvarim.com</div>
 <div id="footer-nav">
-  &copy;2010  | <a href="#">Gizlilik Politikası</a> | <a href="#">Kullanım Şartları</a> | <a href="#">Gizlilik Politikası</a> | <a href="#">Güvenli Ödeme</a> | <a href="#">Hakkımızda</a> | <a href="#">İletişim</a>
+  &copy;2010  | 
+  <%=link_to "Gizlilik Politikası", :gizlilik_politikasi %> |  
+  <%=link_to "Kullanım Şartları", :kullanim_sartlari %> |  
+  <%=link_to "Güvenli Ödeme", :guvenli_odeme %> |  
+  <%=link_to "Hakkımızda", :hakkimizda %> |  
+  <%=link_to "İletişim", :iletisim %> 
 </div>
 </div>
 </div>
