--- a/app/views/layouts/_sidebar.erb
+++ b/app/views/layouts/_sidebar.erb
@@ -4,7 +4,7 @@
       <div class="w-title">Yeni Vakıf ve Dernek Kaydı</div>
       <p>Vakıf ve dernek kayıtlarımız devam ediyor. Organizasyonunuz için internet üzerinden bağış toplamak istiyorsanız, lütfen bizimle iletişime geçiniz.</p>
       
-      <a href="#" class="button green large">Yeni Vakıf ve Dernek Kaydı</a>
+      <a href="/organizations/sign_up" class="button green large">Yeni Vakıf ve Dernek Kaydı</a>
       
     </div>
   </div>
