--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,15 @@
-<h1>Bilgilerimi Düzenle</h1>
+<div id="main-content">
+  <div class="widget widget-light">
+    <div class="w-inner">
+      <div class="w-title">Kişisel Bilgileri Düzenle</div>
 
-<%= render 'form' %>
+        <%= render 'form' %>
 
-<%= link_to 'Show', @user %>
+        <%= link_to 'Show', @user %>
+
+     </div>
+    </div> 
+</div><!-- end of #main-content -->
+
+<%= render 'layouts/sidebar'%>
+
