--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,21 @@
-<div class="widget widget-light widget-form" id="w-yeni-kayi">
+<div class="widget widget-light widget-form" id="w-yeni-kayit">
   <div class="w-inner">
     <div class="w-title">Yeni Kayıt Oluştur</div>
 
 
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-      <%=devise_error_messages!%>
-
-      <div class="field"><%= f.label :email %>
-      <%= f.text_field :email %></div>
+ 
+      <% if devise_error_messages!  %>
+        <div class="msg msg-success">
+          <%=devise_error_messages!%>
+        </div>
+      <% end %>
+      
+      
+      <div class="field">
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+      </div>
 
       <div class="field"><%= f.label :password %>
       <%= f.password_field :password %></div>
@@ -17,8 +25,6 @@
 
       <div class="actions"><%= f.submit "Kayıt Ol", :class=>"button super yellow button-primary" %></div>
     <% end %>
-
  
-
   </div>
 </div>
