--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,5 +1,17 @@
-<h1>Yeni Sayfa Yarat</h1>
+<div id="main-content">
+  <div class="widget widget-light">
+    <div class="w-inner">
+      <div class="w-title">Bağış Kampanyası Düzenle</div>
+       
 
-<%= render 'form' %>
+      <%= render 'form' %>
 
-<%= link_to 'Geri', pages_path %>
+      <%= link_to 'Geri', pages_path %>
+ 
+      </div>
+    </div> 
+</div><!-- end of #main-content -->
+
+<%= render 'layouts/sidebar'%>
+
+ 
