--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @project, :html => { :multipart => true } do |f| %>
   <% if @project.errors.any? %>
-    <div id="error_explanation">
+    <div class="msg-error msg">
       <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
 
       <ul>
@@ -16,17 +16,17 @@
     <%= f.text_field :name %>
   </div>
   <div class="field"> 
-    <%= f.label :logo %><br />
+    <%= f.label :logo %>
     <% unless @project.new_record?%>
       <%= image_tag @project.logo.url(:thumb) %>
     <% end %>
     <%= f.file_field :logo %>
   </div>
-  <div class="field">
-    <%= f.label :start_time %><br /> 
+  <div class="field small-select">
+    <%= f.label :start_time %> 
     <%= f.datetime_select :start_time %>
   </div>
-  <div class="field">
+  <div class="field small-select">
     <%= f.label :end_time %>
     <%= f.datetime_select :end_time %>
   </div>
@@ -35,6 +35,6 @@
     <%= f.text_area :description %>
   </div>
   <div class="actions">
-    <%= f.submit :kaydet, :class=>"button yellow button-primary" %>
+    <%= f.submit :kaydet, :class=>"button yellow super button-primary" %>
   </div>
 <% end %>
