--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,9 +1,14 @@
-<div class="widget widget-light">
-  <div class="w-inner">
-    <div class="w-title">Bağış Kampanyası Oluştur</div>
+<div id="main-content">
+  <div class="widget widget-light">
+    <div class="w-inner">
+      <div class="w-title">Bağış Kampanyası Oluştur</div>
     
-    <%= render 'form' %>
-    <%= link_to 'Back', projects_path %> 
+      <%= render 'form' %>
+      <%= link_to 'Back', projects_path %> 
     
+    </div>
   </div>
-</div>
+</div><!-- end of #main-content -->
+
+
+<%= render 'layouts/sidebar'%>
