--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
-    <div id="error_explanation">
+    <div class="msg msg-error">
       <h2><%= pluralize(@user.errors.count, "error") %> hata:</h2>
 
       <ul>
@@ -12,18 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :address %><br />
+    <%= f.label :address %>
     <%= f.text_area :address %>
   </div>
-  <div class="field">
-    <%= f.label :birthday %><br />
+  <div class="field small-select">
+    <%= f.label :birthday %>
     <%= f.date_select :birthday, :start_year => Time.now.year - 100, :end_year => Time.now.year - 15  %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Kaydet", :class => "button yellow super" %>
   </div>
 <% end %>
