make email text, fix email sending hook

--- a/app/views/contact_mailer/contact_benvarim.html.erb
+++ b/app/views/contact_mailer/contact_benvarim.html.erb
@@ -1,36 +1,15 @@
-# -*- coding: utf-8 -*-
 Yeni Mesaj
-<p>
-  <b>Ad, Soyad:</b>
+Ad, Soyad:
   <%= @contact_form.name %>
-</p>
-
-<p>
-  <b>Şehir:</b>
+Şehir:
   <%= @contact_form.city %>
-</p>
-
-<p>
-  <b>Telefon:</b>
+Telefon:
   <%= @contact_form.phone %>
-</p>
-
-<p>
-  <b>E-posta:</b>
+E-posta:
   <%= @contact_form.email %>
-</p>
-
-<p>
-  <b>Sivil Toplum Kuruluşu:</b>
+Sivil Toplum Kuruluşu:
   <%= @contact_form.organization %>
-</p>
-
-<p>
-  <b>Görevi:</b>
+Görevi:
   <%= @contact_form.organization_role %>
-</p>
-
-<p>
-  <b>Diğer:</b>
+Diğer:
   <%= @contact_form.other %>
-</p>
