new styles for organization and personal pages

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,7 +30,7 @@
         <div class="field">
           <input value="Desteklemek istediğiniz vakıf yada derneği seçiniz..." name="search" class="clear-on-focus" id="featured-input">
         </div>
-        <input type="submit" value="Başla" name="commit" id="featured-submit" class="button super yellow button-primary">               
+        <input type="submit" value="Başla" name="commit" id="featured-submit" class="button super yellow button-primary no-margin">               
       </form>
       
     </div>
