--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -25,9 +25,10 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
 <script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.4.2.js"%3E%3C/script%3E'))</script>
 
+<%= javascript_include_tag "plugins" %>
 
 <!-- scripts concatenated and minified via ant build script-->
-<%= javascript_include_tag "plugins" %>
+<%= javascript_include_tag "jquery-ui-1.8.8.min" %>
 <%= javascript_include_tag "script" %>
 <!-- end concatenated and minified scripts-->
 
