--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -218,6 +218,33 @@ button {  width: auto; overflow: visible; }
 
 
 
+/* 
+** GRID LAYOUT
+*/
+
+.line:after,.lastUnit:after{clear:both;display:block;visibility:hidden;overflow:hidden;height:0 !important;line-height:0;font-size:xx-large;content:" x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x ";}
+.line{*zoom:1;}
+.unit{float:left;}
+.size1of1{float:none;}
+.size1of2{width:50%;}
+.size1of3{width:33.33333%;}
+.size2of3{width:66.66666%;}
+.size1of4{width:25%;}
+.size3of4{width:75%;}
+.size1of5{width:20%;}
+.size2of5{width:40%;}
+.size3of5{width:60%;}
+.size4of5{width:80%;}
+.lastUnit{display:table-cell;float:none;width:auto;*display:block;*zoom:1;_position:relative;_left:-3px;_margin-right:-3px;}
+
+
+
+
+
+
+
+
+
 
 
 /*
@@ -545,15 +572,18 @@ body{
 }
 
 a{ text-decoration:none; }
-a:hover{ border-bottom: 1px dotted 10355b;} 
+a:hover{ border-bottom: 1px dotted #607890 !important;} 
 
 
 h1{
   font-size:24px;
+  margin-bottom:10px;
   line-height:1.67; }
+h2{ margin-bottom:5px;}  
+h6{font-size:85%;}
 
 p{ 
-  margin-bottom:20px;
+  margin-bottom:15px;
   line-height: 1.5; }
   
 .container{
@@ -626,7 +656,7 @@ p{
   opacity:.80; filter: alpha(opacity=80); -moz-opacity: 0.80; }
   
 #site-nav li a:hover{
-  opacity: .95; filter: alpha(opacity=95); -moz-opacity: .95; }
+  opacity: .95; filter: alpha(opacity=95); -moz-opacity: .95; border-bottom:0 !important; }
   
 
 #site-nav .selected{
@@ -636,9 +666,9 @@ p{
   padding: 12px 24px;
   margin-top:0; 
   margin-bottom:0; 
-  border-bottom: 1px solid #2e6093;
+  border-bottom: 1px solid #2e6093 !important;
   opacity: 1; filter: alpha(opacity=100); -moz-opacity: 1; }
-#site-nav a.selected:hover{ opacity: 1; filter: alpha(opacity=100); -moz-opacity: 1; }
+#site-nav a.selected:hover{ opacity: 1; filter: alpha(opacity=100); -moz-opacity: 1; border-bottom: 1px solid #2e6093 !important;}
 
 
 
@@ -729,11 +759,11 @@ p{
 .step.s-first{ margin-left:0;}
 
 
-.campaign-form-container{
-  display:none;
+.campaign-form-container{ 
   border-top: 1px solid #254f79;  
   margin-bottom:5px;
-  height:111px;}
+  height:111px;
+  opacity: 1 }
   
 .campaign-form-container .field{ margin:0;}
 .campaign-form-container h1{
@@ -768,7 +798,6 @@ p{
   
 }
 #featured-content .field{ display:inline;}
-#featured-content .button{ margin:0;}
 
 #main-content{
   width:630px;
@@ -781,20 +810,24 @@ p{
 }
 
 /* Twitter Widget Overwrites */
-.twtr-hd { 
-  border-bottom:1px solid #0c4968;
-  margin-bottom:15px;
-  overflow:hidden;
-  padding: 0 0 15px !important;
-  position:relative; }
+.twtr-hd {
+    border-bottom: 1px solid #243f59;
+    margin-bottom: 10px;
+    overflow: hidden;
+    padding: 0 0 15px !important; }
 
 .twtr-tweet-wrap{ padding:0 !important;}
 
 .twtr-ft div{
-  border-top:1px solid #0c4968;
-  margin-top:15px; 
-  padding: 15px 0 0 !important;
-}
+  border-top:1px solid #0c4968; 
+  padding: 15px 0 0 !important; }
+  
+.twtr-widget .twtr-tweet {
+    border-bottom: 1px solid #243f59 !important; }
+
+.twtr-tweet-text { margin: 10px 0 !important; }
+
+.twtr-widget a:hover { border-bottom: none !important;}
 
 /*
 ** Footer
@@ -948,7 +981,7 @@ body {
   	text-transform: capitalize;
   	margin-left: 120px; }
 
-  .button:hover	{ background-color: #111; color: #fff; }
+  .button:hover	{ background-color: #111; color: #fff; 	border-bottom: 1px solid rgba(0,0,0,0.25) !important;}
   .button:active { top: 1px; }
   .small.button, .small.button:visited { font-size: 11px}
   .button, .button:visited,
@@ -986,14 +1019,21 @@ body {
     text-shadow: 0 -1px 1px #FF9900;
   	-moz-box-shadow: 0 1px 1px rgba(160,90,20,0.6);
   	-webkit-box-shadow: 0 1px 1px rgba(160,90,20,0.6); }
-	.yellow.button:hover						{ background-color: #fc9200; }
+	.yellow.button:hover { background-color: #fc9200; }
 	
-
+	/* more classes */
+	.right.button{ float: right !important;}
+	.no-margin.button { margin:0 !important;} 
+	
+  /* BUTTON EXCEPTIONS */
   #sidebar .button{ 
     display:block;
     margin:0 auto;
     text-align:center;
   }
+   
+   #featured-content .button{ margin:0;}
+  
   	
 
   /*
@@ -1086,8 +1126,26 @@ body {
     }
  
  
-     
-     
+    /*
+    ** Comment Bubble
+    */
+    .comment-bubble { 
+      border:1px solid #DDD; 
+      color: #333; 
+      padding: 15px;
+      position: relative;
+      font-size:24px;
+      margin-bottom: 20px;
+      background: #EEE; }
+      
+    .comment-arrow{
+      position:absolute;
+      top:20px;
+      left:-21px;
+      background:url('images/comment-arrow.png') no-repeat;
+      width:21px;
+      height:25px;
+    } 
      
 
     /*
@@ -1170,6 +1228,56 @@ body {
       text-align:center;
       text-shadow:0 1px 0 #2A4A6A;
     }
+
+
+
+/* 
+ * PAGE SPECIFIC STYLES
+ *
+ */
+ 
+ /*
+  * KURUM
+  */
+.fullcontent-left{
+  width: 182px;
+  float: left;
+  padding:3px; 
+  background: #FFF; }
+  
+.fullcontent-left img{ 
+  background: none repeat scroll 0 0 #FFFFFF;
+  border: 1px solid #DDD;
+  height: auto;
+  padding: 3px;
+  width: 174px; 
+  margin-bottom:5px;}
+
+.fullcontent-left .button{  
+   text-align: center;
+   width: 120px;}   
+  
+.fullcontent-right{
+   float:right;
+   width: 710px; }
+
+
+
+.widget-aktif-bagis p{ margin-bottom:5px; font-size:85%; }
+ 
+.row { clear:both; margin-bottom:0; padding: 10px 0 5px; border-bottom: 1px dotted #ddd; }
+.row-hover { background: #f5f5f5; }
+.row-hover h2 a,
+.row-hover p a { color: #003366;}
+.row .button{margin: 0 6px !important;}
+
+
+.share-options{
+  position:absolute;
+  right:5px;
+  bottom:10px;
+}
+
 
 
 /*
