--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -25,7 +25,7 @@
   <%= link_to @project.organization.name, @project.organization %>
 </p>
 
-<% if organization_signed_in? && current_organization == @project.organization%>
+<% if user_signed_in? && current_user.organization == @project.organization%>
   <%= link_to 'Düzenle', edit_project_path(@project) %>
 <% end %>
 <%= link_to 'Geri', projects_path %>
