--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,6 +19,12 @@
 </div> <!--! end of #footer -->
 
 
+<!-- Share part -->
+<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
+<script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share"></script>
+
+
 <!-- Javascript at the bottom for fast page loading -->
 
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
