--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
             <div class="msg msg-success">
               <%= notice %>
             </div>
-          </% end %>
+          <% end %>
         <p>
           <b>Aktivist:</b>
           <%= @user.name %>, <%=@user.age%>
@@ -19,7 +19,9 @@
 
 
      </div>
-    </div> 
+   </div> 
 </div><!-- end of #main-content -->
 
 <%= render 'layouts/sidebar'%>
+
+
