--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 
 <div id="content" class="clearfix">
   <div class="container">
+    <%=render :partial => 'layouts/errors'%>
+
     <%= yield %>
   </div>
 </div><!-- end of #container -->
