payment v 0.1 . at least we can transfer the money and save it :)

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -42,12 +42,13 @@
   <b>Proje:</b>
   <%= @page.project.name %>
 </p>
+<%=link_to "Bağış Yap", donate_path(@page)%>
 
 <p>
 	<fb:like layout="button_count" show_faces="false" width="150"></fb:like>
 	<a name="fb_share" type="button_count href="http://www.facebook.com/sharer.php">Facebook'ta Paylaş </a>
 </p>
-  
+
 <p>
 	<a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" >Tweet</a>
 	<a style="background: url(http://friendfeed.com/static/images/icons/internal.png) 0px 0px no-repeat; padding-left: 20px; margin-left: 30px;" href="http://friendfeed.com/?url=
