--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,41 +1,97 @@
+<div id="featured-content-2" class="clearfix">
+    <div class="fc-left rc-left">
+      <div class="fc-inner">
+        <div class="steps rc clearfix">
+          <div class="step s-first" id="step-1">
+            <div class="s-number">1.</div>
+            <div class="s-content">Desteklemek istediğiniz vakıf yada derneği seçin ve bağış sayfanızı oluşturun.</div>
+          </div>
+
+          <div class="step" id="step-2">
+            <div class="s-number">2.</div>
+            <div class="s-content">Bağış sayfanızı Facebook, Twitter ve diğer sosyal ağlar üzerinden aileniz ve yakın çevreniz ile paylaşın.</div>
+          </div>
+
+          <div class="step" id="step-3">
+            <div class="s-number">3.</div>
+            <div class="s-content">Topladığınız bağışlar otomatik olarak desteklediğiniz vakıf ya da dernek hesabına aktarılsın.</div>
+          </div>
+        </div> <!-- end of steps -->
+
+        <div class="campaign-form-container">
+          <h2>Bağış kampanyası düzenlemek istiyorum.</h2>
+
+          <form action="#" method="post">
+            <div class="field">
+              <input value="Desteklemek istediğiniz vakıf yada derneği seçiniz..." name="search" class="clear-on-focus" id="featured-input">
+            </div>
+            <input type="submit" value="Başla" name="commit" id="featured-submit" class="button super yellow button-primary no-margin">
+          </form>
+        </div>
+      </div><!-- end of .fc-inner -->
+    </div>
+
+    <div class="fc-right">
+      <div class="profile profile-individual rc-right">
+        <div class="fc-inner">
+          <h3>Gönüllü olmak istiyorum.</h3>
+          <p>benvarım.com’a üye olun, bağış sayfanızı yaratın ve desteklediğiniz vakıf ve dernek için anında bağış toplamaya başlayın.</p>
+        </div>
+      </div>
+
+      <div class="profile profile-nonprofit opaque rc-right">
+        <div class="fc-inner">
+          <h3>Yeni Dernek <span class="amp">&amp;</span> Vakıf Kaydı</h3>
+          <p>benvarım.com’a üye olun, bağış sayfanızı yaratın ve desteklediğiniz vakıf - dernek için anında bağış toplamaya başlayın.</p>
+        </div>
+      </div>
+
+    </div>
+
+
+
+</div><!-- end of #featured-content -->
+
+
+<%
+=begin
+%>
 <div id="featured-content" class="widget widget-dark clearfix">
   <div class="w-inner">
-    
+
     <div class="steps-loading">Yükleniyor...</div>
-     
+
     <div class="steps clearfix">
       <div class="step s-first" id="step-1">
         <div class="s-visual"></div>
         <div class="s-number">1.</div>
         <div class="s-content">Desteklemek istediğiniz vakıf yada derneği seçin ve bağış sayfanızı oluşturun.</div>
       </div>
- 
+
       <div class="step" id="step-2">
         <div class="s-visual"></div>
         <div class="s-number">2.</div>
         <div class="s-content">Bağış sayfanızı aileniz ve yakın çevreniz ile paylaşın, bağışlar toplansın.</div>
       </div>
-    
+
       <div class="step" id="step-3">
         <div class="s-visual"></div>
         <div class="s-number">3.</div>
         <div class="s-content">Topladığınız bağışlar otomatik olarak desteklediğiniz vakıf ya da dernek hesabına aktarılsın.</div>
       </div>
     </div> <!-- end of steps -->
-    
+
     <div class="campaign-form-container">
       <h1>Bağış kampanyası düzenlemek istiyorum.</h1>
-      
+
       <form action="#" method="post">
         <div class="field">
           <input value="Desteklemek istediğiniz vakıf yada derneği seçiniz..." name="search" class="clear-on-focus" id="featured-input">
         </div>
-        <input type="submit" value="Başla" name="commit" id="featured-submit" class="button super yellow button-primary no-margin">               
+        <input type="submit" value="Başla" name="commit" id="featured-submit" class="button super yellow button-primary no-margin">
       </form>
-      
+
     </div>
-    
-    
   </div>
 </div><!-- end of #featured-content -->
 
@@ -52,8 +108,10 @@
   </div>
 </div><!-- end of #main-content -->
 
-
 <%= render 'layouts/sidebar'%>
+<%
+=end
+%>
 
 
- 
+
