bagis sayfasi tasarimi guncellendi.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,7 +42,7 @@
       <div class="profile profile-nonprofit opaque rc-right">
         <div class="fc-inner">
           <h3>Yeni Dernek <span class="amp">&amp;</span> Vakıf Kaydı</h3>
-          <p>benvarım.com’a üye olun, bağış sayfanızı yaratın ve desteklediğiniz vakıf - dernek için anında bağış toplamaya başlayın.</p>
+          <p>Organizasyonunuz için internet üzerinden bağış toplamak istiyorsanız, lütfen bizimle iletişime geçiniz.</p>
         </div>
       </div>
 
